# Ababil-Studio

./: .editorconfig  .prettierrc  README.md  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: lib.rs  postman.rs
core/src/models/: collection.rs  environment.rs  mod.rs  request.rs  variable.rs
readme/: README.en.md
src/: App.tsx
src/components/: SplashScreen.tsx
src/components/environment/: EnvironmentPage.tsx
src/components/header/: AppHeader.tsx  TopHeader.tsx
src/components/layout/: HomeLayout.tsx  ResizableLayout.tsx
src/components/navigation/: LeftNav.tsx
src/components/request/: RequestSection.tsx  VariableEditDialog.tsx  VariableTextarea.tsx  VariableUrlInput.tsx
src/components/response/: ResponseSection.tsx
src/components/settings/: ThemesSection.tsx
src/components/sidebar/: CollectionItem.tsx  Sidebar.tsx
src/components/tabs/: RequestTabsBar.tsx
src/contexts/: EnvironmentContext.tsx  TabContext.tsx
src/services/: environmentService.ts  httpClient.ts  postmanService.ts  storage.ts  tabStorageService.ts
src/styles/: global.css
src/types/: electron.d.ts  environment.ts  http.ts  tabTypes.ts
src/utils/: constants.ts  helpers.ts  variableReplacer.ts
