[package]
name = "ababil_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ababil_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"

[build-dependencies]
cbindgen = "0.24"

    